<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_select_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        android:layout_marginTop="@dimen/_8dp"
        android:layout_marginStart="@dimen/_45dp"
        android:layout_marginEnd="@dimen/_45dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sp"
        android:gravity="center"
        android:paddingTop="@dimen/_8dp"
        android:paddingBottom="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_gallery"
        app:layout_constraintTop_toBottomOf="@id/tv_select_image"
        />

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:layout_marginBottom="@dimen/_8dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        android:padding="@dimen/_4dp"
        app:layout_constraintStart_toStartOf="@id/iv_camera"
        app:layout_constraintEnd_toEndOf="@id/iv_camera"
        app:layout_constraintTop_toBottomOf="@id/iv_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/iv_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_gallery"
        app:layout_constraintStart_toEndOf="@id/iv_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select_image"
        />

    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:layout_marginBottom="@dimen/_8dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        android:padding="@dimen/_4dp"
        app:layout_constraintStart_toStartOf="@id/iv_gallery"
        app:layout_constraintEnd_toEndOf="@id/iv_gallery"
        app:layout_constraintTop_toBottomOf="@id/iv_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>