<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipe_refresh"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.RandomDishFragment">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_dish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:id="@+id/iv_dish_photo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_300dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/iv_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:src="@drawable/ic_favorite_with_line"
                    android:background="@drawable/bg_favorite"
                    app:layout_constraintEnd_toEndOf="@id/iv_dish_photo"
                    app:layout_constraintTop_toTopOf="@id/iv_dish_photo"
                    />

                <TextView
                    android:id="@+id/tv_dish_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:padding="@dimen/_4dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_dish_photo"
                    tools:text="Dish name" />

                <TextView
                    android:id="@+id/tv_dish_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:padding="@dimen/_4dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_dish_name"
                    tools:text="Type" />

                <TextView
                    android:id="@+id/tv_dish_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:padding="@dimen/_4dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_dish_type"
                    tools:text="Category" />

                <TextView
                    android:id="@+id/tv_ingredients_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:padding="@dimen/_4dp"
                    android:text="@string/hint_ingredients"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_dish_category" />

                <TextView
                    android:id="@+id/tv_dish_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:padding="@dimen/_4dp"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_ingredients_heading"
                    tools:text="ingredients" />

                <TextView
                    android:id="@+id/tv_directions_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:padding="@dimen/_4dp"
                    android:text="@string/hint_direction_to_cook"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_dish_ingredients" />

                <TextView
                    android:id="@+id/tv_directions_to_cook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:padding="@dimen/_4dp"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_directions_heading"
                    tools:text="Directions" />

                <TextView
                    android:id="@+id/tv_time_for_cook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:gravity="center"
                    android:padding="@dimen/_4dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_directions_to_cook"
                    tools:text="Time" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="visible"
                />

            <TextView
                android:id="@+id/tv_offline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/_24sp"
                android:text="@string/you_are_offline"
                android:textColor="@color/theme_color"
                android:padding="@dimen/_8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>